--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "jquery": "^3.7.0",
+    "jquery-ui-dist": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
