--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@supabase/supabase-js": "^2.24.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -21,6 +22,7 @@
     "react-spring": "^9.4.5-beta.1",
     "reactstrap": "^9.0.1",
     "redux-logger": "^3.0.6",
+    "supabase": "^1.64.8",
     "typeface-lobster": "^1.1.13",
     "typeface-open-sans": "^1.1.13",
     "web-vitals": "^2.1.4"
