--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery-ui-dist": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax": "^3.5.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
