--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^14.4.3",
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
+    "firebase": "^10.0.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "jquery": "^3.7.0",
