--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "firebase": "^10.0.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "i18next": "^23.4.1",
+    "i18next-browser-languagedetector": "^7.1.0",
     "jquery": "^3.7.0",
     "jquery-ui-dist": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.3",
     "react-parallax": "^3.5.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.1",
@@ -25,6 +28,7 @@
     "react-spring": "^9.4.5-beta.1",
     "reactstrap": "^9.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "supabase": "^1.64.8",
     "typeface-lobster": "^1.1.13",
     "typeface-open-sans": "^1.1.13",
