--- a/package.json
+++ b/package.json
@@ -4,24 +4,20 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
-    "@supabase/supabase-js": "^2.24.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "axios": "^1.4.0",
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
     "firebase": "^10.0.0",
+    "flag-icons": "^6.11.2",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^7.1.0",
-    "jquery": "^3.7.0",
-    "jquery-ui-dist": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.3",
-    "react-parallax": "^3.5.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
@@ -29,8 +25,6 @@
     "reactstrap": "^9.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "typeface-lobster": "^1.1.13",
-    "typeface-open-sans": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
