--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ jqueryExperiment.js
 .env.development.local
 .env.test.local
 .env.production.local
+.nyc_output
+.firebase
 
 npm-debug.log*
 yarn-debug.log*
