--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
     "firebase": "^10.0.0",
     "flag-icons": "^6.11.2",
     "font-awesome": "^4.7.0",
-    "formik": "^2.2.9",
     "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "react": "^18.2.0",
@@ -21,16 +17,13 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
-    "react-spring": "^9.4.5-beta.1",
     "reactstrap": "^9.0.1",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.4"
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "nyc jest",
     "eject": "react-scripts eject",
     "scss": "sass src/cssStyling/*.scss"
   },
@@ -53,6 +46,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "babel-jest": "^29.7.0",
+    "jest": "^27.5.1",
+    "nyc": "^15.1.0",
+    "redux-logger": "^3.0.6",
     "sass": "^1.64.1"
   }
 }
