--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
+    "cypress": "cypress open",
+    "cypress-headless": "cypress run",
     "coverage": "nyc jest",
     "eject": "react-scripts eject",
     "scss": "sass src/cssStyling/*.scss"
@@ -53,6 +55,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "babel-jest": "^29.7.0",
+    "cypress": "^13.6.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "jest": "^27.5.1",
